# TecnoServer

./: CMakeLists.txt  Constants.c  Constants.h  DataManager.c  DataManager.h  README.md  constants.c  constants.h  datamanager.c  datamanager.h  main.c
ChSocket/: Commands.c  Commands.h  Communication.c  Communication.h  Makefile  Socket.c  Socket.h  Socket_Cliente.c  Socket_Cliente.h  Socket_Servidor.c  Socket_Servidor.h
